<resources>
    <string name="app_name">Usauario TBC</string>
    <string name="action_settings">Settings</string>
    <string name="label_email"> Email</string>
    <string name="email"> usted@ejemplo.com</string>
    <string name="label_nombre"> Nombre</string>
    <string name="nombre"> Pepito Perez</string>
    <string name="label_cedula"> Cedula</string>
    <string name="cedula"> 4363235</string>
    <string name="label_direccion">Dirección </string>
    <string name="direccion">Calle Falsa 123 </string>
    <string name="label_fecha"> Fecha</string>
    <string name="fecha"> 15/15/15 </string>
    <string name="boton_fecha">Fecha</string>
    <string name="label_hora"> Hora</string>
    <string name="hora"> 15:00</string>
    <string name="boton_hora"> Hora</string>
    <string name="boton_solicitar"> Solicitar</string>
    <string name="boton_borrar">Eliminar</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
</resources>
